{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 8,
  "lineage": "2a2fc9da-bc05-0ba1-07f1-0c9f08a1c36d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-back/1933e6bcc28f6724",
            "arn_suffix": "app/alb-back/1933e6bcc28f6724",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-back-1027617564.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-back/1933e6bcc28f6724",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-back",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0932af430f9717492"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04978e2ace510a47e"
              },
              {
                "subnet_id": "subnet-07379d1235ffbd6cd"
              },
              {
                "subnet_id": "subnet-0e9dc8827c272dc8d"
              }
            ],
            "subnets": [
              "subnet-04978e2ace510a47e",
              "subnet-07379d1235ffbd6cd",
              "subnet-0e9dc8827c272dc8d"
            ],
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb_asg_SG",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-front/2dcfdff4be545734",
            "arn_suffix": "app/alb-front/2dcfdff4be545734",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-front-1582551043.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-front/2dcfdff4be545734",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-front",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0932af430f9717492"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-047c2d68a5b0d5bd1"
              },
              {
                "subnet_id": "subnet-058dde08941525ee5"
              },
              {
                "subnet_id": "subnet-0e52045d1167295ba"
              }
            ],
            "subnets": [
              "subnet-047c2d68a5b0d5bd1",
              "subnet-058dde08941525ee5",
              "subnet-0e52045d1167295ba"
            ],
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "vpc_id": "vpc-0f5259b11a88615cf",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb_asg_SG",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:listener/app/alb-back/1933e6bcc28f6724/8326ee83015462b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-back-lb/022b4b845bc3dfa9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:listener/app/alb-back/1933e6bcc28f6724/8326ee83015462b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-back/1933e6bcc28f6724",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_back",
            "aws_lb_target_group.tg_for_back_lb",
            "aws_security_group.lb_asg_SG",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:listener/app/alb-front/2dcfdff4be545734/000228e5e4184486",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-front-lb/9661d6a0b509aeb5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:listener/app/alb-front/2dcfdff4be545734/000228e5e4184486",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:loadbalancer/app/alb-front/2dcfdff4be545734",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_front",
            "aws_lb_target_group.tg_for_front_lb",
            "aws_security_group.lb_asg_SG",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_for_back_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-back-lb/022b4b845bc3dfa9",
            "arn_suffix": "targetgroup/tg-for-back-lb/022b4b845bc3dfa9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-back-lb/022b4b845bc3dfa9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-for-back-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_for_front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-front-lb/9661d6a0b509aeb5",
            "arn_suffix": "targetgroup/tg-for-front-lb/9661d6a0b509aeb5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:335809563306:targetgroup/tg-for-front-lb/9661d6a0b509aeb5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-for-front-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_asg_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:security-group/sg-0932af430f9717492",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0932af430f9717492",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DOS11-student-lb_asg_SG",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "project-x",
              "Name": "DOS11_Student",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    }
  ]
}